--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -1,21 +1,3 @@
-.channel-main-container {
-	position: fixed;
-	right: 0;
-	top: 0;
-	height: 75vh;
-	width: 20vw;
-	/* background-color: #0f1248; */
-	display: flex;
-	/* opacity: 0.90; */
-	flex-direction: column;
-	border-radius: 5px;
-	background-image: url('../../../img/chat/channel_wallpaper.png');
-	/* background-image: url('../../../img/chat/test_wallpaper.png'); */
-	background-size: cover;
-	/* This property scales the image to cover the entire container */
-	background-repeat: no-repeat;
-}
-
 .channel-bandeau {
 	height: 5%;
 	width: 100%;
@@ -40,18 +22,6 @@
 	color: white;
 }
 
-/* .channel-name li {
-    padding: 0;
-    margin: 1px 1px 1px 1px;
-}
-
-.channel-name img {
-	max-width: 100%;
-	max-height: 100%;
-	width: auto;
-	height: auto;
-} */
-
 .channel-bandeau ul {
 	display: flex;
 	flex-direction: row;
@@ -60,6 +30,7 @@
 }
 
 .channel-actions {
+	cursor: pointer;
 	width: 100%;
 	height: 3%;
 	background-color: #f0ecf2;
@@ -76,6 +47,22 @@
 .channel-actions ul li {
 	margin-right: 10px;
 	/* Adjust the right margin for spacing */
+}
+
+.dropdown-menu {
+	z-index: ;
+	position: absolute;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	position: absolute;
+	background-color: #f9f4e1;
+	/* Light beige background color for the menu */
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	display: none;
 }
 
 .channel-modo-mode {
@@ -136,6 +123,8 @@
 	/* background-color: black; */
 }
 
+/*1*/
+
 .channel-conversation-messages {
 	width: 94%;
 	margin-left: 3%;
@@ -145,38 +134,60 @@
 	overflow-y: auto;
 }
 
-.channel-conversation-messages::-webkit-scrollbar {
-	display: none;
-	cursor: pointer;
-}
-
 .channel-conversation-messages ul {
 	display: flex;
 	flex-direction: column;
 	font-size: 10px;
 	list-style: none;
 	margin-left: 3%;
-	padding: 0;
+	padding: 0; 
+	list-style: none;
+    margin-left: 0px;
+    /* padding-left: 10px; */
 }
 
-.channel-conversation-messages ul div {
-	font-weight: bold;
-	color: #333;
-	margin-bottom: 5px;
-	font-size: 14px;
+/*2*/
+
+.conv-sender-info-chan {
+	font-size: 13px;
+    font-weight: bold;
+    margin-right: 5px;
+    margin-left: 0px;
+	/* font-size: 10px; */
+    color: #216ec0; /* Blue color for the sender's name */
 }
 
-.channel-conversation-messages ul li {
-	word-wrap: break-word;
-	/* Allow long words to break onto a new line */
-	max-width: 80%;
-	/* Limit message width */
-	clear: both;
+.conv-message-content-chan {
+    background-color: #f1f0f0;
 	font-size: 16px;
-	margin-top: 0%;
-	/* Adjust the font size as needed */
-	margin-left: 6%;
-	/* Add left margin for indentation */
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    /* margin-left: 6%; */
+	padding-left: 8%;
+	width: 100%;
+	height: 15%;
+}
+
+.conv-message-date-chan {
+	font-size: 12px;
+	color: #888; 
+}
+
+.channel-conversation-messages {
+	width: 100;
+    height: 100%;
+    background-color: #FCFDFF;
+	/* background-color: red; */
+    opacity: 0.7;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+	padding: 0;
+    overflow-y: auto;
+}
+
+.channel-conversation-messages::-webkit-scrollbar {
+	display: none;
+	cursor: pointer;
 }
 
 .channel-profile-pic-and-member-list {
@@ -238,8 +249,6 @@
 	cursor: pointer;
 }
 
-/* background-color: red; */
-
 .channel-group-member-list ul {
 	list-style: none;
 	font-size: 15px;
@@ -288,7 +297,6 @@
 	/* Center vertically */
 }
 
-/* Style the channel container */
 .channel-left {
 	position: relative;
 	height: 70%;
@@ -310,25 +318,6 @@
 	/* Subtle shadow */
 }
 
-/* Style the textarea */
-
-.textarea {
-	display: block;
-	width: 100%;
-	min-height: 7%;
-	overflow: auto;
-	resize: none;
-	line-height: 20px;
-	max-height: 200px;
-	border: none;
-	/* Remove textarea border */
-	background-color: #fff;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
-	opacity: 0.7;
-}
-
-/* Hide scrollbars */
 textarea::-webkit-scrollbar {
 	display: none;
 	cursor: pointer;
@@ -337,7 +326,6 @@ textarea::-webkit-scrollbar {
 .channel-right-buttons {
 	width: 25%;
 	height: 70%;
-	/* background-color: #e4e7ec; */
 	display: flex;
 	flex-direction: column;
 }
@@ -363,16 +351,14 @@ textarea::-webkit-scrollbar {
 	cursor: text;
 }
 
-span.textarea[contenteditable]:empty::before {
+/* span.textarea[contenteditable]:empty::before {
     content: 'Anything to say ?';
     display: inline-block;
 	cursor: text;
-}
+} */
 
-/* Hover effect */
 .button:hover {
 	background-color: #005A9E;
-	/* Darker blue on hover */
 }
 
 .channel-my-profile-pic-main-container {
@@ -395,6 +381,7 @@ span.textarea[contenteditable]:empty::before {
 	border-width: 1px;
 	border-style: solid;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding: 5px;
@@ -408,4 +395,9 @@ span.textarea[contenteditable]:empty::before {
 	border-color: black;
 	border-style: solid;
 	border-width: 1px;
+}
+
+.channel-my-profile-pic-group-pic-cadre div img {
+	height: 100%;
+	width: 100%;
 }
