--- a/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
+++ b/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
@@ -77,7 +77,7 @@
     font-size: 14px;
     background-color: #fffedc;
 }
-
+/*1*/
 .text-already-sent {
     width: 100;
     height: 60%;
@@ -94,11 +94,7 @@
     padding-left: 10px;
 }
 
-.conv-message {
-    display: flex;
-    margin-bottom: 10px;
-  }
-  
+/*2*/
   .conv-sender-info {
     font-weight: bold;
     margin-right: 5px;
