--- a/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
+++ b/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
@@ -72,26 +72,28 @@
     /* border-radius: 5px; */
     background-color: azure;
     margin-left: 10%;
-    padding-left: 2%; 
+    border-color: lightgrey;
+    padding-left: 5%; 
     padding-right: 2%;
     padding-top: 3%;
     padding-bottom: 2%;
-    border-color: lightgrey;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 
 .advertisement {
-    width: 100%;
+    width: 40%;
     border-radius: 5px;
-    height: 98%;
+    height: 100%;
     border: solid;
     border-width: 1px;
-    /* background-image: url("./images.jpeg"); */
-    /* background-size: 100; a modifier plus tard */
     background-repeat: no-repeat;
-    /* object-fit: cover; */
 }
 
 #chat_advertisement {
     height:100%;
     width:100%;
+    object-fit: cover;
+    object-position: top right;
 }
