blocked messages in channels

--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -10,6 +10,25 @@
     border-radius: 5px;
 }
 
+.chat-channel-area {
+	top: 20vh;
+	left: 60vw;
+}
+
+.channel-main-container {
+	top: 20vh;
+	left: 60vw;
+	position: absolute;
+	height: 75vh;
+	width: 20vw;
+	display: flex;
+	flex-direction: column;
+	border-radius: 5px;
+	background-image: url('../../../img/chat/channel_wallpaper.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 .channel-name {
 	flex: 1;
 	/* Take available space */
@@ -227,6 +246,11 @@
 	border-width: 1px;
 	border-style: solid;
 	border-color: black;
+}
+
+.channel-pik img {
+	width: 100%;
+	height: 100%;
 }
 
 .channel-group-member-list {
