--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -6,22 +6,8 @@
 
 .channel-conv-pfp {
 	height: 100%;
-	width: 100%;
-	border-radius: 5px;
-}
-
-.channel-main-container {
-	top: 10vh;
-	left: 60vw;
-	position: absolute;
-	height: 75vh;
-	width: 20vw;
-	display: flex;
-	flex-direction: column;
-	border-radius: 5px;
-	background-image: url('../../../img/chat/channel_wallpaper.png');
-	background-size: cover;
-	background-repeat: no-repeat;
+    width: 100%;
+    border-radius: 5px;
 }
 
 .chat-channel-area {
@@ -151,7 +137,7 @@
 	margin-left: 3%;
 	margin-right: 3%;
 	/* background-color: #f7eeb1; */
-	background-color: rgba(247, 238, 177, 0.9);
+	background-color: rgba(247,238,177, 0.9);
 	font-size: 8px;
 	/* background-color: black; */
 }
@@ -173,30 +159,29 @@
 	font-size: 10px;
 	list-style: none;
 	margin-left: 3%;
-	padding: 0;
+	padding: 0; 
 	list-style: none;
-	margin-left: 0px;
-	/* padding-left: 10px; */
+    margin-left: 0px;
+    /* padding-left: 10px; */
 }
 
 /*2*/
 
 .conv-sender-info-chan {
 	font-size: 13px;
-	font-weight: bold;
-	margin-right: 5px;
-	margin-left: 0px;
+    font-weight: bold;
+    margin-right: 5px;
+    margin-left: 0px;
 	/* font-size: 10px; */
-	color: #216ec0;
-	/* Blue color for the sender's name */
+    color: #216ec0; /* Blue color for the sender's name */
 }
 
 .conv-message-content-chan {
-	background-color: #f1f0f0;
+    background-color: #f1f0f0;
 	font-size: 16px;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
-	/* margin-left: 6%; */
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    /* margin-left: 6%; */
 	padding-left: 8%;
 	width: 100%;
 	height: 15%;
@@ -204,19 +189,19 @@
 
 .conv-message-date-chan {
 	font-size: 12px;
-	color: #888;
+	color: #888; 
 }
 
 .channel-conversation-messages {
 	width: 100;
-	height: 100%;
-	background-color: #FCFDFF;
+    height: 100%;
+    background-color: #FCFDFF;
 	/* background-color: red; */
-	opacity: 0.7;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+    opacity: 0.7;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 	padding: 0;
-	overflow-y: auto;
+    overflow-y: auto;
 }
 
 .channel-conversation-messages::-webkit-scrollbar {
@@ -264,8 +249,8 @@
 }
 
 .channel-pik img {
-	height: 100%;
 	width: 100%;
+	height: 100%;
 }
 
 .channel-group-member-list {
