--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -1,7 +1,34 @@
+.channel-main-container {
+	top: 20vh;
+	left: 60vw;
+	position: absolute;
+	height: 75vh;
+	width: 30vw;
+	display: flex;
+	flex-direction: column;
+	border-radius: 5px;
+	background-image: url('../../../img/chat/channel_wallpaper.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 .channel-bandeau {
 	height: 5%;
 	width: 100%;
 	background-color: #0054e8;
+	align-items: center;
+	display: flex;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	padding-right: 1.5%;
+	padding-left: 1.5%;;
+}
+
+#chat_icon {
+	/* position: inherit; */
+	height: 25px;
+	width: 25px;;
 }
 
 .channel-conv-pfp {
@@ -15,30 +42,33 @@
 	left: 60vw;
 }
 
-.channel-main-container {
-	top: 20vh;
-	left: 60vw;
-	position: absolute;
-	height: 75vh;
-	width: 20vw;
-	display: flex;
-	flex-direction: column;
-	border-radius: 5px;
-	background-image: url('../../../img/chat/channel_wallpaper.png');
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-
 .channel-name {
 	flex: 1;
-	/* Take available space */
 	font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
-	/* Use your custom font */
 	font-size: 1rem;
-	/* Adjust font size as needed */
 	font-weight: bold;
-	/* Adjust font weight as needed */
 	color: white;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+#chat_redcross {
+	position: inherit;
+	width: 25px;
+	height: 25px;
+}
+
+#chat_maximize {
+	position: inherit;
+	width: 25px;
+	height: 25px;
+}
+
+#chat_minimize {
+	position: inherit;
+	width: 25px;
+	height: 25px;
 }
 
 .channel-bandeau ul {
@@ -46,6 +76,8 @@
 	flex-direction: row;
 	justify-content: end;
 	list-style: none;
+	align-items: center;
+	margin-top: 1%;
 }
 
 .channel-actions {
@@ -114,13 +146,13 @@
 	/* background-color: #e9e9f5; */
 	display: flex;
 	flex-direction: row;
+	padding-top: 2%;
+	padding-left: 2%;;
 }
 
 .channel-group-convo {
 	height: 98%;
 	width: 64%;
-	margin-top: 2%;
-	margin-left: 2%;
 	padding-top: 2%;
 	padding-bottom: 2%;
 	display: flex;
@@ -214,7 +246,59 @@
 	margin-top: 1%;
 	margin-left: 2%;
 	width: 30%;
+	overflow-x: auto;
 	/* background-color: orange; */
+}
+
+#channels-ban-user {
+	height: 15px;
+	width: 15px;
+}
+
+#channels-block-user {
+	height: 15px;
+	width: 15px;
+}
+
+.channel-group-member-list-ul-li {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding:0;
+	margin:0;
+	/* padding: 10px; */
+	margin: 5px 0;
+}
+
+.channel-group-member-list ul img {
+	height: 20px;
+}
+
+.channel-group-member-list-logo-name-pseudo {
+	width: 75%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	justify-content: flex-start;
+}
+
+.channel-group-member-list-nickname {
+	font-size: 12px;
+	margin-right: 5%
+}
+
+.channel-group-member-list-ban-bloc {
+	display: flex;
+	width: 25%;
+	padding: 0;
+	margin: 0;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 
 .channel-group-pic-main-container {
@@ -273,73 +357,54 @@
 	cursor: pointer;
 }
 
-.channel-group-member-list ul {
+.channel-group-member-list-ul {
 	list-style: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	font-size: 15px;
 	margin: 0;
 	padding: 0;
-}
-
-.channel-group-member-list ul img {
-	height: 20px;
-}
-
-.channel-group-member-list ul li {
-	display: flex;
-	/* Use flex layout to align the image and text */
-	align-items: center;
-	/* Center align vertically */
-	background-color: #fff;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	padding: 10px;
-	margin: 5px 0;
-}
+}/*channel-group-member-list-logo-name-pseudo*/
 
 .channel-send-messages-part {
 	height: 25%;
 	width: 100%;
-	/* background-color: #e4e7ec; */
-	/* opacity: 45%; */
 	display: flex;
 	padding-left: 2%;
 	padding-right: 2%;
+	padding-bottom: 2%;
 	flex-direction: row;
+	/* background-color: yellow; */
 }
 
 .channel-input-text {
 	width: 66%;
+	padding: 2% 2% 2% 2%;
+	/* width: 60%; */
 	height: 100%;
-	/* background-color: #818eb1; */
-	/* background-color: red; */
 	border-radius: 15px;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: center;
-	/* Center horizontally */
 	align-items: center;
-	/* Center vertically */
+	/* background-color: red; */
 }
 
-.channel-left {
+.channel-up {
 	position: relative;
-	height: 70%;
-	width: 75%;
-	/* background-color: #f2f5f8; */
-	/* background-image: url('../../../img/chat/channel_wallpaper.png'); */
-
+	height: 90%;
+	width: 100%;
 	border: 1px solid #ccc;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	border-width: 1px;
 	display: flex;
 	flex-direction: column-reverse;
-	/* Reverse the direction for messages */
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 	background-color: #fff;
 	opacity: 0.7;
-
-	/* Subtle shadow */
+	/* background-color: yellow; */
 }
 
 textarea::-webkit-scrollbar {
@@ -347,20 +412,23 @@ textarea::-webkit-scrollbar {
 	cursor: pointer;
 }
 
-.channel-right-buttons {
-	width: 25%;
-	height: 70%;
+.channel-down {
+	padding:0;
+	width: 100%;
+	height: 5%;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row-reverse;
+	/* justify-content: flex-end; */
+	/* position: relative; */
+	bottom: 5px;
+	right: 5px;
 }
 
-.channel-right-buttons {
+.channel-down-button {
 	display: flex;
-	flex-direction: column-reverse;
-}
-
-.button {
-	display: inline-block;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 	padding: 8px 16px;
 	background-color: #0B3E9D;
 	/* Windows blue */
@@ -375,22 +443,42 @@ textarea::-webkit-scrollbar {
 	cursor: text;
 }
 
-/* span.textarea[contenteditable]:empty::before {
+span.channel-up-span[contenteditable]:empty::before {
     content: 'Anything to say ?';
     display: inline-block;
 	cursor: text;
-} */
+	overflow-y: auto;
+}
 
-.button:hover {
+.channel-up-span {
+	display: block;
+	width: 100%;
+	min-height: 7%;
+	overflow: auto;
+	resize: none;
+	line-height: 20px;
+	max-height: 200px;
+	border: none;
+	/* Remove textarea border */
+	background-color: #fff;
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+	opacity: 0.7;
+}
+
+.channel-up-span::-webkit-scrollbar {
+	display: none;
+	cursor: pointer;
+}
+
+.channel-down-button:hover {
 	background-color: #005A9E;
 }
 
 .channel-my-profile-pic-main-container {
 	width: 34%;
 	height: 100%;
-	margin-top: 5%;
-	/* background-color: #a2acc6; */
-	/* background-color: orange; */
+	padding: 3% 2% 2% 2%;
 	border-radius: 15px;
 	display: flex;
 	justify-content: center;
@@ -398,8 +486,9 @@ textarea::-webkit-scrollbar {
 }
 
 .channel-my-profile-pic-group-pic-cadre {
-	width: 95%;
-	height: 75%;
+	padding: 2% 2% 2% 2%;
+	width: 100%;
+	height: 90%;
 	background-color: #a2acc6;
 	border-radius: 5px;
 	border-width: 1px;
