--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -84,7 +84,8 @@
 	cursor: pointer;
 	width: 100%;
 	height: 3%;
-	background-color: #f0ecf2;
+	/* background-color: #f0ecf2; */
+	background-color: #ece8d8;
 }
 
 .channel-actions ul {
