--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: trebuchet_ms_xp;
+	src: url(../../../fonts/trebuc.ttf)
+  }
+
+  @font-face {
+	font-family: tahoma_xp;
+	src: url(../../../fonts/Tahoma\ Regular\ font.ttf)
+  }
+
 /* Base styles for DropdownChannels */
 .dropdown {
 	position: relative;
@@ -53,14 +63,19 @@
 	top: 50%;
 	left: 50%;
 	width: 400px;
-	height: 400px;
+	height: 250px;
 	transform: translate(-50%, -50%);
 	flex-direction: column;
 	padding: 0;
 	margin: 0;
 	background-color: #E9E8D7;
 	/* Lighter beige background color */
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: inset -1px -1px #00138c, 
+	inset 1px 1px #0831d9, 
+	inset -2px -2px #001ea0, 
+	inset 2px 2px #166aee, 
+	inset -3px -3px #003bda, 
+	inset 3px 3px #0855dd
 }
 
 .channel-creation-navbar {
@@ -69,25 +84,48 @@
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	width: 100%;
-	height: 9%;
-	background-color: #0057e9;
+	height: 35px;
+
+    background: linear-gradient(
+        180deg,
+        rgba(9, 151, 255, 1) 0%,
+        rgba(0, 83, 238, 1) 8%,
+        rgba(0, 80, 238, 1) 40%,
+        rgba(0, 102, 255, 1) 88%,
+        rgba(0, 102, 255, 1) 93%,
+        rgba(0, 91, 255, 1) 95%,
+        rgba(0, 61, 215, 1) 96%,
+        rgba(0, 61, 215, 1) 100%
+    );
+
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
 	align-items: center;
 	list-style: none;
+	border: 1px solid #0831d9;
+}
+
+#logo {
+    margin-left: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+.ddc-right-icons {
+    display: flex;
+    align-items: center; /* Center vertically */
 }
 
 .create-channel-title {
-	flex: 1;
-	/* Take available space */
-	font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
-	/* Use your custom font */
-	font-size: 1rem;
-	/* Adjust font size as needed */
-	font-weight: bold;
-	/* Adjust font weight as needed */
-	color: white;
+    flex: 1; /* Take available space */
+    font-family: trebuchet_ms_xp;
+    letter-spacing: 1px;
+    font-size: 90%; /* Adjust font size as needed */
+    font-weight: bold; /* Adjust font weight as needed */
+    color:white;
+    text-shadow: 1px 1px #0f1089;
+    text-indent: 2%;
 }
 
 .channel-creation-navbar img {
@@ -101,7 +139,12 @@
 	margin: 0;
 	padding: 0;
 	height: 91%;
-	width: 100%;
+	width: 95%;
+
+	margin-left: 15px;
+	margin-right: 15px;
+	font-family: tahoma_xp;
+	
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -111,14 +154,28 @@
 .channel-creation-input {
 	height: 33%;
 	width: 100%;
+	font-size: 7px;
+
+	margin-left: 25px;
+
+
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 	align-items: center;
 }
 
 .ze-input {
-	width: 40%;
+	padding: 3px 4px;
+    border: 1px solid #7f9db9;
+    background-color: #fff;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0;
+    height: 21px;
+    line-height: 2;
 }
 
 .channel-creation-options {
@@ -127,11 +184,9 @@
 	width: 94%;
 	padding: 0;
 	/* margin-left: 3%; */
-	border-width: 1px;
-	border-style: solid;
-	border-color: grey;
 	display: flex;
 	flex-direction: column;
+	align-items: flex-start;
 }
 
 .channel-creation-options h1 {
@@ -157,12 +212,42 @@
 	height: 100%;
 	width: 100%;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+}
+
+.channel-creation-options .channel-creation-fieldset {
+	box-shadow: none;
+    background: #fff;
+    border: 1px solid #d0d0bf;
+    border-radius: 4px;
+    padding-top: 10px;
+	width: 100%;
+}
+
+.channel-creation-options .channel-creation-legend {
+    background: transparent;
+    color: #0046d5;
+	font-size: 11px;
+}
+
+.channel-cration-public, .channel-creation-private {
+	display: flex;
+    align-items: center;
+}
+
+input[type="radio"] {
+	margin-right: 10px;
 }
 
 .channel-creation-buttons {
 	height: 27%;
 	width: 100%;
+	margin-left: 25px;
+}
+
+.label-priv-pub {
+	font-size: 14px;
+	color: rgb(68, 66, 38);
 }
 
 .channel-creation-border {
@@ -176,25 +261,64 @@
 	background-color: #ffffff;
 }
 
-.checkboxes-tick input[type="checkbox"] {
-	/* margin-right: 20px; */
+/* .checkboxes-tick input[type="checkbox"] {
+	margin-right: 20px;
+} */
+
+.channel-creation-password {
+	margin-right: 10px;
+	padding: 3px 4px;
+    border: 1px solid #7f9db9;
+    background-color: #fff;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0;
+    height: 21px;
+    line-height: 2;
 }
 
-.channel-creation-container button {
-	background-color: #f5e1b2;
-	/* Beige background color */
-	color: #333;
-	/* Dark text color */
-	border: none;
-	padding: 8px 16px;
-	cursor: pointer;
-	border-radius: 4px;
-	transition: background-color 0.3s ease;
+.channel-creation-password-disabled {
+	margin-right: 10px;
+	padding: 3px 4px;
+    border: 1px solid #9b9b9b;
+    background-color: #E9E8D7;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0;
+    height: 21px;
+    line-height: 2;
 }
 
-.channel-creation-container button:hover {
-	background-color: #f9e8c0;
-	/* Lighter beige background color on hover */
+.channel-creation-container .button-create {
+	-webkit-font-smoothing: antialiased;
+	font-size: 12px;
+	box-sizing: border-box;
+	border: 1px solid #003c74;
+	background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgb(236, 235, 229) 86%, rgb(216, 208, 196) 100%);
+	box-shadow: none;
+	border-radius: 3px;
+	color: rgb(68, 66, 38);
+}
+
+.button-create:not(:disabled):active, .button-create:not(:disabled).active {
+	box-shadow: none;
+	background: linear-gradient(180deg, rgb(205, 202, 195) 0%, rgb(227, 227, 219) 8%, rgb(229, 229, 222) 94%, rgb(242, 242, 241) 100%);
+}
+
+.button-create:not(:disabled):hover {
+	box-shadow: inset -1px 1px #fff0cf, inset 1px 2px #fdd889, inset -2px 2px #fbc761, inset 2px -2px #e5a01a;
+}
+
+.button-create:focus, button.focused {
+	box-shadow: inset -1px 1px #cee7ff, inset 1px 2px #98b8ea, inset -2px 2px #bcd4f6, inset 1px -1px #89ade4, inset 2px -2px #89ade4;
+}
+
+.button-create::-moz-focus-inner {
+	border: 0;
 }
 
 
@@ -204,17 +328,22 @@
 	position: fixed;
 	display: flex;
 	/* gap: 10px;   */
-	top: 50%;
+	top: 20%;
 	left: 50%;
 	width: 400px;
-	height: 225px;
+	height: 200px;
 	transform: translate(-50%, -50%);
 	flex-direction: column;
 	padding: 0;
 	margin: 0;
 	background-color: #E9E8D7;
 	/* Lighter beige background color */
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: inset -1px -1px #00138c, 
+	inset 1px 1px #0831d9, 
+	inset -2px -2px #001ea0, 
+	inset 2px 2px #166aee, 
+	inset -3px -3px #003bda, 
+	inset 3px 3px #0855dd
 }
 
 .channel-join-navbar {
@@ -223,13 +352,26 @@
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	width: 100%;
-	height: 18%;
-	background-color: #0057e9;
+	height: 50px;
+
+    background: linear-gradient(
+        180deg,
+        rgba(9, 151, 255, 1) 0%,
+        rgba(0, 83, 238, 1) 8%,
+        rgba(0, 80, 238, 1) 40%,
+        rgba(0, 102, 255, 1) 88%,
+        rgba(0, 102, 255, 1) 93%,
+        rgba(0, 91, 255, 1) 95%,
+        rgba(0, 61, 215, 1) 96%,
+        rgba(0, 61, 215, 1) 100%
+    );
+
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
 	align-items: center;
 	list-style: none;
+	border: 1px solid #0831d9;
 }
 
 .join-channel-title {
@@ -254,6 +396,26 @@
 .question {
 	font-weight: normal;
 	color: rgb(68, 66, 38);
+	margin-right: 10px;
+}
+
+.channel-join-container .channel-join-fieldset {
+	box-shadow: none;
+    background: #fff;
+    border: 1px solid #d0d0bf;
+    border-radius: 4px;
+    padding-top: 10px;
+	width: 92%;
+
+	margin-top: 15px;
+	margin-left: 15px;
+    margin-right: 15px;
+}
+
+.channel-join-container .channel-join-legend {
+    background: transparent;
+    color: #0046d5;
+	font-size: 11px;
 }
 
 .channel-join-form {
@@ -265,28 +427,29 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-
 }
 
 .channel-join-input {
 	height: 33%;
 	width: 100%;
+	font-size: 7px;
+
 	display: flex;
 	flex-direction: row;
+	/* justify-content: space-between; */
 	align-items: center;
-	justify-content: space-between;
-}
-
-.channel-join-input h1 {
-	font-weight: normal;
-	color: rgb(68, 66, 38);
 }
 
 .channel-join-options {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
 	justify-content: space-between;
+
+	font-size: 7px;
+
+	margin-left: 15px;
+	margin-top: 15px;
+	margin-right: 15px;
 }
 
 .channel-join-options h1 {
@@ -298,12 +461,40 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: flex-end;
-	height: 40%;
+	justify-content: end;
+	height: 50%;
+	gap: 5px;
+	margin-right: 15px;
 }
 
-.buttons-join-cancel button {
-	margin-left: 4px;
+.button-join-cancel, .button-join-join {
+	-webkit-font-smoothing: antialiased;
+	font-size: 12px;
+	box-sizing: border-box;
+	border: 1px solid #003c74;
+	background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgb(236, 235, 229) 86%, rgb(216, 208, 196) 100%);
+	box-shadow: none;
+	border-radius: 3px;
+	color: rgb(68, 66, 38);
+}
+
+.button-join-cancel:not(:disabled):active, .button-join-cancel:not(:disabled).active,
+.button-join-join:not(:disabled):active, .button-join-join:not(:disabled).active {
+	box-shadow: none;
+	background: linear-gradient(180deg, rgb(205, 202, 195) 0%, rgb(227, 227, 219) 8%, rgb(229, 229, 222) 94%, rgb(242, 242, 241) 100%);
+}
+
+.button-join-cancel:not(:disabled):hover,  .button-join-join:not(:disabled):hover{
+	box-shadow: inset -1px 1px #fff0cf, inset 1px 2px #fdd889, inset -2px 2px #fbc761, inset 2px -2px #e5a01a;
+}
+
+.button-join-cancel:focus, .button-join-cancel.focused,
+.button-join-join:focus, .button-join-join.focused {
+	box-shadow: inset -1px 1px #cee7ff, inset 1px 2px #98b8ea, inset -2px 2px #bcd4f6, inset 1px -1px #89ade4, inset 2px -2px #89ade4;
+}
+
+.button-join-cancel::-moz-focus-inner, .button-join-join::-moz-focus-inner{
+	border: 0;
 }
 
 /* **********delete container************ */
@@ -312,17 +503,22 @@
 	position: fixed;
 	display: flex;
 	/* gap: 10px;   */
-	top: 50%;
+	top: 80%;
 	left: 50%;
 	width: 400px;
-	height: 225px;
+	height: 200px;
 	transform: translate(-50%, -50%);
 	flex-direction: column;
 	padding: 0;
 	margin: 0;
 	background-color: #E9E8D7;
 	/* Lighter beige background color */
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: inset -1px -1px #00138c, 
+	inset 1px 1px #0831d9, 
+	inset -2px -2px #001ea0, 
+	inset 2px 2px #166aee, 
+	inset -3px -3px #003bda, 
+	inset 3px 3px #0855dd
 }
 
 .channel-delete-navbar {
@@ -331,85 +527,43 @@
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	width: 100%;
-	height: 18%;
-	background-color: #0057e9;
+	height: 50px;
+
+    background: linear-gradient(
+        180deg,
+        rgba(9, 151, 255, 1) 0%,
+        rgba(0, 83, 238, 1) 8%,
+        rgba(0, 80, 238, 1) 40%,
+        rgba(0, 102, 255, 1) 88%,
+        rgba(0, 102, 255, 1) 93%,
+        rgba(0, 91, 255, 1) 95%,
+        rgba(0, 61, 215, 1) 96%,
+        rgba(0, 61, 215, 1) 100%
+    );
+
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
 	align-items: center;
 	list-style: none;
+	border: 1px solid #0831d9;
 }
 
-.delete-channel-title {
-	flex: 1;
-	/* Take available space */
-	font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
-	/* Use your custom font */
-	font-size: 1rem;
-	/* Adjust font size as needed */
-	font-weight: bold;
-	/* Adjust font weight as needed */
-	color: white;
+.channel-delete-container .channel-join-fieldset {
+	box-shadow: none;
+    background: #fff;
+    border: 1px solid #d0d0bf;
+    border-radius: 4px;
+    padding-top: 10px;
+	width: 92%;
+
+	margin-top: 15px;
+	margin-left: 15px;
+    margin-right: 15px;
 }
 
-.channel-delete-navbar img {
-	padding: 0;
-	margin: 0;
-	width: 30px;
-	height: 30px;
-}
-
-.question {
-	font-weight: normal;
-	color: rgb(68, 66, 38);
-}
-
-.channel-delete-form {
-	margin: 0;
-	padding: 0;
-	height: 33%;
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-
-}
-
-.channel-delete-input {
-	height: 33%;
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.channel-delete-input h1 {
-	font-weight: normal;
-	color: rgb(68, 66, 38);
-}
-
-.channel-delete-options {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.channel-delete-options h1 {
-	font-weight: normal;
-	color: rgb(68, 66, 38);
-}
-
-.buttons-delete-cancel {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-end;
-	height: 40%;
-}
-
-.buttons-delete-cancel button {
-	margin-left: 4px;
+.channel-delete-container .channel-join-legend {
+    background: transparent;
+    color: #0046d5;
+	font-size: 11px;
 }
